  * Add support for the ppc64 architecture.  (Closes: #301438).
  * Use the new slibdir, libdir, rtlddir variables to build the various
    flavours of the libc. Put them directly in the final directory, and
    remove the corresponding tweaks done after the make install phase.
  * Install the 32-bit libraries in /emul/ia32-linux(/usr)/lib on amd64.

  [ Clint Adams ]
  * Get rid of -o as a binary operator to [ in tzconfig and postinst.

  [ Denis Barbier ]
  * Update localedata/locales/ro_RO.  Thanks Eddy Petrişor.  (Closes: #347173)
  * Bump LOCALES_DEP_VER to 2.3.6-2.  All locales can be compiled with
    localedef from 2.3.6-2 and 2.3.6-3.  (Closes: #352620)
  * Updated Italian debconf translation, by Luca Monducci.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 23 Feb 2006 21:46:25 +0100

glibc (2.3.6-2) unstable; urgency=low

   [ Denis Barbier ]
   * Modify debver2localesdep.pl, locales-depver and control files to provide
     a smooth upgrade in unstable when locales require changes in localedef.
     This is the first part for solving #352620, the proper dependency for
     locales will be set by the next upload.
   * debian/control: Clean up. Remove versioned dependencies on gettext,
     debianutils, tar, texinfo; these versions were already in oldstable.
     Drop references to localebin, wg15-locale, i18ndata, locale-ja, locale-ko,
     locale-vi, locale-zh, libc6-doc, glibcdoc and libc6 (<< 2.1-4).
   * debian/control: Split Build-Depends on several lines for readability
     purpose.
   * Add RON to locale/iso-4217.def and bump LOCALES_COMPAT_VER to 2.3.6-2.
   * Fix thousand separator for de_CH, and let other Swiss locales copy
     de_CH for LC_NUMERIC and LC_MONETARY sections.  (Closes: #345481)
   * Apply a patch from Fedora to define AM/PM strings in cy_GB and en_GB
     locales.  (Closes: #240901)
   * Fix the week definition for the C locale.
   * Check first_weekday fields against current CLDR snapshot.  Modified