@@ -8,6 +8,9 @@ glibc (2.3.6-3) UNRELEASED; urgency=low
     flavours of the libc. Put them directly in the final directory, and
     remove the corresponding tweaks done after the make install phase.
   * Install the 32-bit libraries in /emul/ia32-linux(/usr)/lib on amd64.
+  * Only create the multiarch directories and the symlinks in /lib/ldconfig
+    for the main pass. Otherwise alternate libraries would conflict with the
+    main one when using multiarch.
 
   [ Clint Adams ]
   * Get rid of -o as a binary operator to [ in tzconfig and postinst.
